fixed mobile view

--- a/templates/login.html
+++ b/templates/login.html
@@ -32,6 +32,23 @@
         flex-wrap: nowrap;
         align-self: center;
     }
+    @media (max-width: 768px){
+        .container {
+            width: 100%;
+            padding-bottom: 5px;
+        }
+/* 
+        .sidebar{
+            display: none;
+        }
+        .show-sidebar{
+            display: inline;
+            position: fixed;
+            top: 4.4rem;
+            height: auto;
+        } */
+    
+    }
 </style>
 <body class="container" style="background-color: beige;">
     <div class="login" style="background-color: rgb(186, 204, 219); padding-bottom: 40px;">
