--- a/MyTind/static/css/base.css
+++ b/MyTind/static/css/base.css
@@ -47,5 +47,25 @@ body{
     cursor: pointer;
 }
 
+@media (max-width: 768px) {
+    .main-body {
+        /* padding: 2px; */
+        grid-template-columns: 1fr 1fr;
+        line-height: 2px;
+    }
 
+    .main-body li {
+        font-size: 12px;
+        word-spacing: normal;
+        font-family: monospace;
+        box-shadow: 1px 5px 8px .6 rgb(39, 28, 28);
+
+    }
+
+    .main-body img {
+        width: 100%;
+        height: 200px;
+    }
+
+}
 
