--- a/MyTind/static/css/base.css
+++ b/MyTind/static/css/base.css
@@ -2,7 +2,7 @@ body{
     background-color: blanchedalmond;
 }
 .main-body{
-    padding: 10px;
+    padding: 5px;
     width: 100%;
     border: 2px solid red;
     background-color: rgb(247, 217, 217);
@@ -31,34 +31,30 @@ body{
     to {opacity: 1;}
 }
 
-.main-body li{
+.details{
+    background-color: rgb(223, 223, 223);
+}
+
+.details li{
     font-size: 20px;
-    color: rgb(0, 0, 0);
     font-family:monospace;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    background-color:rgb(225, 253, 245);
+    display: block;
     box-shadow: 1px 5px 8px .6 rgb(39, 28, 28);
-    text-align: center;
     border-radius: 5px;
-    margin: 10px;
-    padding: 10px;
-    cursor: pointer;
 }
 
 @media (max-width: 768px) {
     .main-body {
-        /* padding: 2px; */
         grid-template-columns: 1fr 1fr;
-        line-height: 2px;
+        /* line-height: 2px; */
     }
 
-    .main-body li {
+    .details li {
         font-size: 12px;
         word-spacing: normal;
         font-family: monospace;
         box-shadow: 1px 5px 8px .6 rgb(39, 28, 28);
+        margin: 2px;
 
     }
 
