--- a/MyTind/static/css/base.css
+++ b/MyTind/static/css/base.css
@@ -32,7 +32,8 @@ body{
 }
 
 .details{
-    background-color: rgb(223, 223, 223);
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.836);
 }
 
 .details li{
