'Containerizing a django todoapp thru a pipline'

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,8 @@
     </div>
     {% endblock %}
 
-
+        <div class="col-3 bg-info border-5 ">
+        </div>
     <script type="text/javascript">
         let like=document.querySelectorAll('#like');
         let likes=document.querySelectorAll('#likes');
