--- a/templates/details.html
+++ b/templates/details.html
@@ -29,7 +29,7 @@
                         <form action="" method="post">
                             {% csrf_token %}
                             {{form.as_p}}
-                            <input class="btn btn-outline-warning"  type="submit" value="Upload">
+                            <input class="btn btn-outline-warning"  type="submit" name="Upload">
                         </form>
                     </div>
                 </details>
